force-app/main/default/objects/Cloudrop__Advanced_Template__c/Cloudrop__Advanced_Template__c.object-meta.xml
<CustomObject>
    <label>Advanced Template</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Advanced Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advanced Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>