force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Base_Template__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Base_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Template</label>
    <type>Checkbox</type>
</CustomField>