force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Base_Template_Custom_Metadata_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Base_Template_Custom_Metadata_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Base Template Custom Metadata Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>