force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Base_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Base_Template_Name__c</fullName>
    <label>Base Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>