force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>