force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__EmailPreviewText__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__EmailPreviewText__c</fullName>
    <description>This field is used to store the preview text for test emails.</description>
    <label>EmailPreviewText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>