force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__EmailTemplate_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__EmailTemplate_API_Name__c</fullName>
    <label>EmailTemplate API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>