force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__HtmlValue__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__HtmlValue__c</fullName>
    <label>HtmlValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>