force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Is_Managed__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Is_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Managed</label>
    <type>Checkbox</type>
</CustomField>