force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__JsonValue__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__JsonValue__c</fullName>
    <label>JsonValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>