force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Soft_Delete__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Soft_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Soft Delete</label>
    <type>Checkbox</type>
</CustomField>