force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__Subject__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Subject__c</fullName>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>