force-app/main/default/objects/Cloudrop__Advanced_Template__c/fields/Cloudrop__TextValue__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__TextValue__c</fullName>
    <label>TextValue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>